tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-struct-field.wyst
module demo
struct Box { widen: u64 }
